--- a/datausa/assets/scss/elements/_profile_m.scss
+++ b/datausa/assets/scss/elements/_profile_m.scss
@@ -36,7 +36,7 @@ body.profile, body.story {
     .intro {
 
       .intro-txt {
-        @include flex-size(2 0 200px);
+        @include flex-size(2);
         padding-right: 0px;
       }
 
